tests/neg-macros/i9801b/Test_2.scala
def test: Unit = loop(4) // error
